# encrypted-traffic-anomaly-detection

./: .gitignore  Makefile  PROJECT-CZ.md  README.md  SETUP.md  demo-benchmark.sh  demo.sh  docker-compose.benchmark.yml  docker-compose.yml  freeze_artifacts.sh  ops_smoke_daemon.sh  requirements.txt  run_experiment.sh
detection-mechanisms/: Dockerfile  README.md  __init__.py  cli.py  evaluation.py  feature_selection.py  flow_reader.py  pyproject.toml  statistical_tests.py  visualization.py
detection-mechanisms/datasets/: __init__.py  download.py  normalize_cicids.py  normalize_unsw.py  prepare.py  schema.py  sequences.py
detection-mechanisms/models/: __init__.py  base.py  registry.py
detection-mechanisms/models/ai/: __init__.py  _common.py  autoencoder.py  cnn.py  gru.py  lstm.py  transformer.py
detection-mechanisms/models/traditional/: __init__.py  baseline.py  ensemble.py  isolation_forest.py  kmeans.py  pca.py  threshold.py
detection-mechanisms/scripts/: setup_kaggle.py
detection-mechanisms/tests/: test_cli_smoke.py  test_daemon_lifecycle.py  test_evaluation_metrics.py  test_experiment_outputs.py  test_flow_replayer_behavior.py  test_registry_and_models.py
docs/: canonical-flow-format.md  detection-daemon.md  experimental-environment.md  sequence-models.md  testing-environment-design.md  testing-environment.md
experiments/: README.md  refresh_cv_only.py  run_experiment.py
testing-environment/: README.md
tex/: app01.tex  app02.tex  kap01.tex  kap02.tex  kap03.tex  literatura.bib  makra.tex  output.xmpdata  pdfa.xmpi  prace.tex  prace.xmpdata  (+5 more)
(+34 files in other folders)
